@@ -42,7 +42,7 @@ object PartiallySolvedQuery {
       where = q.where.toSeq.flatMap(_.atoms.map(Unsolved(_))),
       aggregation = q.aggregation.toSeq.flatten.map(Unsolved(_)),
       sort = q.sort.map(Unsolved(_)),
-      slice = q.slice.toSeq.map(Unsolved(_)),
+      slice = q.slice.map(Unsolved(_)),
       namedPaths = q.namedPaths.map(Unsolved(_)),
       aggregateQuery = if (q.aggregation.isDefined)
         Unsolved(true)
@@ -62,7 +62,7 @@ object PartiallySolvedQuery {
     where = Seq(),
     aggregation = Seq(),
     sort = Seq(),
-    slice = Seq(),
+    slice = None,
     namedPaths = Seq(),
     aggregateQuery = Solved(false),
     extracted = false,
@@ -81,7 +81,7 @@ case class PartiallySolvedQuery(returns: Seq[QueryToken[ReturnColumn]],
                                 where: Seq[QueryToken[Predicate]],
                                 aggregation: Seq[QueryToken[AggregationExpression]],
                                 sort: Seq[QueryToken[SortItem]],
-                                slice: Seq[QueryToken[Slice]],
+                                slice: Option[QueryToken[Slice]],
                                 namedPaths: Seq[QueryToken[NamedPath]],
                                 aggregateQuery: QueryToken[Boolean],
                                 extracted: Boolean,
